--- a/zabbix_bridge.css
+++ b/zabbix_bridge.css
@@ -20,8 +20,24 @@
     float: left;
     width: 200px;
     height: 200px;
+    border-style: solid;
+    border-width: 1px;
+    margin: 10px;
+    padding: 10px;
+    border-color: darkGray;
+    text-align: center;
 }
 
 #zabbix-bridge-hosts-form #edit-submit {
     float: left;
+}
+
+#zabbix-bridge-hosts-form .form-item label {
+    width: 100%;
+    float: left;
+}
+
+#zabbix-bridge-hosts-form div {
+    text-align: center;
+
 }
