--- a/zabbix_bridge.css
+++ b/zabbix_bridge.css
@@ -6,7 +6,7 @@
         Module wide style sheet
 */
 
-#edit-submit {
+/*#edit-submit {
     width: 100px;
     height: 50px;
     color: green;
@@ -16,7 +16,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
     background-color: lightGreen;
-}
+}*/
 
 #zabbix-bridge-hosts-form div .form-item {
     display: block;
